--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Wyatt's Website</title>
-        <link rel="stylesheet" href="style.css">
+        <style src="style.css"></style>
     </head>
     <body>
         <script src="script.js"></script>
