--- a/web.html
+++ b/web.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Wyatt's Website</title>
-        <style src="style.css"></style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Hello Welcome to Wyatts Website</h1>
